--- a/css/style1.css
+++ b/css/style1.css
@@ -9,6 +9,17 @@ h2 {
   background-color: #990000;
 }
 
+h3 {
+  font-family: Arial;
+  color: #990000;
+}
+
+h4 {
+  font-family: Arial;
+  color: #FFFFFF;
+  background-color: #990000;
+}
+
 p{
   color: #990000;
   font-family: Times;
