--- a/css/style2.css
+++ b/css/style2.css
@@ -1,8 +1,9 @@
 h1 {
   font-family: Tahoma, Arial, sans-serif;
   background-color: #ab123c;
-
-
+  text-align: center;
+  text-decoration: underline;
+  letter-spacing: 5px;
 }
 
 h2 {
@@ -10,6 +11,8 @@ h2 {
   font-style: italic;
   color: #ff00bc;
   background-color: #cb12ef;
+  text-decoration: none;
+  letter-spacing: 3px;
 }
 
 h3 {
