--- a/css/style1.css
+++ b/css/style1.css
@@ -20,15 +20,23 @@ h4 {
   background-color: #990000;
 }
 
-p{
+p {
   color: #990000;
   font-family: Times;
   background-color: #ffffff;
 }
 
-li{
+li {
   list-style-type: none;
   color: #990000;
   font-family: Courier;
   background-color: #ffffff;
+}
+
+span{
+  font-size: 30em;
+}
+
+img{
+  float: center;
 }
